# TinderBotz

./: .gitignore  pyproject.toml  setup-venv.ps1  setup-venv.sh
Scraper/: extract_tinder_cookies.py  tinder_profile_scraper.py
tinderbotz/: session.py
tinderbotz/helpers/: geomatch.py  geomatch_helper.py
