[project]
name = "tinderbotz"
version = "1.0.0"
description = "Tinder web automation and scraper"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.8.3,<5.0",
    "undetected-chromedriver>=3.4.6,<4.0",
    "webdriver-manager>=3.8.6,<4.0",
    "Pillow>=10.3.0,<11.0",
    "deepface",
    "opencv-python",
    "numpy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


